fixed popup clipping

--- a/css/style.css
+++ b/css/style.css
@@ -460,7 +460,26 @@ body {
   top: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.8);
-  z-index: 3000; }
+  z-index: 3000;
+  opacity: 0;
+  visibility: hidden;
+  transition: all .3s; }
+  .popup:target {
+    opacity: 1;
+    visibility: visible; }
+  .popup:target .popup__content {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1); }
+  .popup__close:link, .popup__close:visited {
+    color: #777;
+    position: absolute;
+    top: 2.5rem;
+    right: 4.5rem;
+    font-size: 4rem;
+    text-decoration: none;
+    display: inline-block; }
+  .popup__close:hover {
+    color: #28b485; }
   .popup__content {
     position: absolute;
     top: 50%;
@@ -471,7 +490,9 @@ body {
     background-color: #fff;
     border-radius: 4px;
     display: table;
-    overflow: hidden; }
+    overflow: hidden;
+    transform: translate(-50%, -50%) scale(0.5);
+    transition: all .3s .15s; }
   .popup__right {
     width: 66.6667%;
     display: table-cell;
